--- a/page_settings.json
+++ b/page_settings.json
@@ -1,102 +1,6 @@
 {
-  "342962005565991": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "322132827647368": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "124511227423239": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "156085630927785": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "156672407522533": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "104176752787817": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "126052457247180": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "104131732792306": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "109694388761830": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "108674608863482": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "115452808179784": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "110838791977935": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "108671838862445": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "108118338915559": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "101498432908702": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "124412997227557": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "106850072161633": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "583385755500159": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "105049582108331": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "108812398243094": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "105035428551289": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "104392138768175": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "101469802400343": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "104410022067475": {
-    "keyword": "nan",
-    "source": "nan"
-  },
-  "306450056216668": {
-    "keyword": "nan",
-    "source": "nan"
+  "1234567890": {
+    "keyword": "qq88",
+    "source": "https://www.qq8866.com/"
   }
 }
