--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==3.0.3
-requests==2.31.0
-urllib3==2.2.2
-gunicorn==21.2.0
+Flask>=3.0,<4
+gunicorn>=21.2
+requests>=2.31
+urllib3>=2.2
+openai>=1.50.0
